# WEngine

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  README.md  main.cpp
Camera/: Camera.cpp  Camera.h
Components/: Component.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Transformer.cpp  Transformer.h
Core/: Application.cpp  Application.h
Engine/Core/: Core.h
Engine/Core/Private/: AnyThread.cpp  Engine.cpp  RHIThread.cpp  RenderingThread.cpp  WNamedThread.cpp  WRenderThread.cpp
Engine/Core/Public/: AnyThread.h  Engine.h  RHIThread.h  RenderingThread.h  WNamedThread.h  WRenderThread.h
Engine/Editor/Private/: Debug.cpp  Editor.cpp  Ray.cpp  Screen.cpp
Engine/Editor/Public/: Debug.h  Editor.h  Ray.h  Screen.h
Engine/Event/Private/: Event.cpp  Input.cpp  KeyEvent.cpp  MouseButtonEvent.cpp  MouseEvent.cpp  TimeStep.cpp  WindowEvent.cpp  WindowInput.cpp
Engine/Event/Public/: Event.h  Input.h  InputMacro.h  KeyEvent.h  MouseButtonEvent.h  TimeStep.h  WindowEvent.h  WindowInput.h
Engine/Framework/Private/: Application.cpp  GuiLayer.cpp  Layer.cpp  LayerStack.cpp  SlateLayer.cpp
Engine/Framework/Public/: Application.h  GuiLayer.h  Layer.h  LayerStack.h  SlateLayer.h
Engine/HAL/Private/: Event.cpp  PlatformProcess.cpp  TaskGraph.cpp  WEvent.cpp  WRWScopeLock.cpp  WRunnable.cpp  WScopeLock.cpp  WThread.cpp  WThreadManager.cpp
Engine/HAL/Public/: Event.h  Platform.h  PlatformProcess.h  TaskGraph.h  WEvent.h  WRWScopeLock.h  WRunnable.h  WScopeLock.h  WThread.h  WThreadManager.h
Engine/Log/: VulkanDebug.cpp  VulkanDebug.h
Engine/Log/Private/: Logger.cpp
Engine/Log/Public/: Logger.h
Engine/Math/: Common.h  Matrix.h  Vector.h
Engine/RHI/Private/: RHIBuffer.cpp  RHICommandBuffer.cpp  RHICommandPool.cpp  RHIContext.cpp  RHIDevice.cpp  RHIEvent.cpp  RHIFence.cpp  RHIFramebuffer.cpp  RHIGPU.cpp  RHIGroup.cpp  RHIGroupLayout.cpp  RHIGroupPool.cpp  RHIHeap.cpp  RHIInstance.cpp  RHIPipelineResourceLayout.cpp  RHIPipelineStateObject.cpp  RHIQuery.cpp  RHIQueue.cpp  RHIRenderPass.cpp  RHIRenderTarget.cpp  RHISampler.cpp  RHIScissor.cpp  RHISemaphore.cpp  RHIShader.cpp  RHIStaticState.cpp  RHISurface.cpp  RHISwapchain.cpp  RHITexture.cpp  RHITextureView.cpp  RHIView.cpp  RHIViewport.cpp
Engine/RHI/Public/: RHIBlendState.h  RHIBuffer.h  RHICommandBuffer.h  RHICommandPool.h  RHIContext.h  RHICore.h  RHIDepthStencilState.h  RHIDevice.h  RHIEvent.h  RHIFence.h  RHIFramebuffer.h  RHIGPU.h  RHIGroup.h  RHIGroupLayout.h  RHIGroupPool.h  RHIHeads.h  RHIHeap.h  RHIInstance.h  RHIMultiSampleState.h  RHIPipelineResourceLayout.h  RHIPipelineStateObject.h  RHIQuery.h  RHIQueue.h  RHIRasterizationState.h  RHIRenderPass.h  RHIRenderTarget.h  RHIResource.h  RHISampler.h  RHISamplerState.h  RHIScissor.h  RHISemaphore.h  RHIShader.h  RHIStaticState.h  RHISurface.h  RHISwapchain.h  RHITexture.h  RHITextureView.h  RHIVertexInputState.h  RHIView.h  RHIViewport.h
Engine/Render/Private/: Buffer.cpp  CascadedShadowMap.cpp  CommandBuffer.cpp  Framebuffer.cpp  MeshPassProcessor.cpp  RHICommand.cpp  RHICommandList.cpp  Rasterizer.cpp  RenderAPI.cpp  RenderCommand.cpp  RenderContext.cpp  RenderDependencyGraph.cpp  RenderDependencyGraphParameter.cpp  RenderDependencyGraphResource.cpp  RenderResource.cpp  RenderTarget.cpp  RenderTexture.cpp  Scene.cpp  SceneView.cpp  SceneVisibility.cpp  ScriptableRenderer.cpp  Shader.cpp  ShaderParameterMacros.cpp  ShadowMap.cpp  Texture.cpp  Viewport.cpp
Engine/Render/Public/: Buffer.h  CascadedShadowMap.h  CommandBuffer.h  Framebuffer.h  MeshPassProcessor.h  MeshPassProcessor.inl  RHICommand.h  RHICommandList.h  Rasterizer.h  RenderAPI.h  RenderCommand.h  RenderContext.h  RenderCore.h  RenderDependencyGraph.h  RenderDependencyGraphDefinitions.h  RenderDependencyGraphParameter.h  RenderDependencyGraphResource.h  RenderResource.h  RenderTarget.h  RenderTexture.h  Scene.h  SceneView.h  SceneVisibility.h  ScriptableRenderer.h  Shader.h  ShaderParameterMacros.h  ShadowMap.h  Texture.h  Vertex.h  (+1 more)
Engine/Sources/: EntryPoint.h  WEngine.h  main.cpp  pch.h
Example/Private/: SandBox.cpp
Example/Public/: SandBox.h
Icons/: WEngine.rc  resource.h
Math/: Matrix.h  Vector.h
Platform/OpenGL/: OGLRenderAPI.cpp  OGLRenderAPI.h  OGLRenderContext.cpp  OGLRenderContext.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLShader.h  OGLWindow.cpp  OGLWindow.h  glad.c
Platform/Windows/: WindowsRenderAPI.cpp  WindowsRenderAPI.h  WindowsRenderContext.cpp  WindowsRenderContext.h  WindowsRenderer.cpp  WindowsRenderer.h  WindowsShader.cpp  WindowsShader.h  WindowsWindow.cpp  WindowsWindow.h
REngine/: Build.bat  CMakeLists.txt
Render/: Framebuffer.cpp  Framebuffer.h  Rasterizer.cpp  Rasterizer.h  RenderAPI.cpp  RenderAPI.h  RenderContext.h  Renderer.cpp  Renderer.h  Vertex.h
Renderer/: Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Vertex.h
Scene/: Entity.cpp  Entity.h  Light.cpp  World.cpp  World.h
Utils/: OBJLoader.cpp  OBJLoader.h  Shader.cpp  Shader.h  Tools.h  Window.cpp  Window.h
WEngine/Camera/: Camera.cpp
WEngine/Components/: Component.h  Material.cpp  Material.h  Transformer.cpp  Transformer.h
WEngine/Core/: Application.cpp  Application.h
WEngine/Event/: Event.h
WEngine/Render/: Framebuffer.cpp  Framebuffer.h  Rasterizer.cpp  Rasterizer.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderContext.h  Renderer.cpp  Renderer.h
WEngine/Scene/: Entity.h  Light.h  World.cpp  World.h
WEngine/Utils/: OBJLoader.cpp  OBJLoader.h  Shader.cpp  Shader.h  Window.cpp  Window.h
assets/: Compile.bat  DebugDraw.hlsl  DebugDrawFrag.ps  DebugDrawFrag.spv  DebugDrawVS.spirv  DebugDrawVert.spv  DebugDrawVert.vs  DepthOnlyFrag.ps  DepthOnlyFrag.spv  DepthOnlyShader.hlsl  DepthOnlyVert.spv  DepthOnlyVert.vs  DepthShader.hlsl  OpaqueFrag.ps  OpaqueFrag.spv  OpaqueShader.hlsl  OpaqueVert.spv  OpaqueVert.vs  OutlineFrag.ps  OutlineFrag.spv  OutlineShader.hlsl  OutlineVert.spv  OutlineVert.vs  SkyboxShader.hlsl  SkyboxShaderFrag.ps  SkyboxShaderFrag.spv  SkyboxShaderVert.spv  SkyboxShaderVert.vs  Test.hlsl  frag.spv  vert.spv
(+348 files in other folders)
